
[workspace]
resolver = "2"
exclude = [
  "./egui",
  "./egui/crates/eframe",
  "./tracing-egui",
  "./petgraph",
  "./minimal_options",
  #"./graph_app",
  #"./ngrams",
  #"./justlog",
  #"./seqraph",
]
members = [
  "graph_app",
  "ngrams",
  "justlog",
  "context-engine/context-search",
  "context-engine/context-insert",
  "context-engine/context-read", "context-engine/code-helper",
]

[profile.release]
opt-level = 2 # fast and small wasm
