
[workspace]
resolver = "2"
exclude = [
  "./egui",
  "./rerun",
  "./egui/crates/eframe",
  "./tracing-egui",
  "./minimal_options",
  "./context-engine",
]
members = ["graph_app", "ngrams"]

# Enable unwinding panics so catch_unwind works in wasm
[profile.release]
opt-level = 2    # fast and small wasm
panic = "unwind"

[profile.dev]
panic = "unwind"
