[package]
authors = ["Linus Behrbohm <linusbehrbohm@web.de>"]
edition = "2018"
name = "context-read"
version = "0.1.0"
resolver = "2"

[features]
default = [] #["log_stdout", "log_gui"]
test-hashing = []

[[bin]]
name = "context-read"

[dependencies]
async-std = "1.12"
async-trait = "^0.1"
either = "^1.6"
futures = "^0.3"
indexmap = { version = "^2.7", features = ["serde"]}
lazy_static = "^1.4"
maplit = "^1"
num-traits = "^0.2"
pin-project-lite = "^0.2"
serde_json = "^1"
rand = "^0.9"
rand_distr = "^0.5"
itertools = "^0.14"
function_name = "^0.3"
indicatif = "^0.17"
histo = "^1"
rayon = "^1.5.3"
tap = "^1"
replace_with = "0.1.7"
async-recursion = "1"
derive_more = {version="2", features=["full"]}
linked_hash_set = "0.1.4"
linked-hash-map = "0.5.6"
derive-new = "0.7"
inquire = "0.7"
auto_impl = "1.2.0"
nrfind = "1"
ngram = "0.1"
csv = "1"
derivative = "^2.2"
justlog = { path = "../justlog" }
context-search = { path = "../context-search", features = ["test-api"] }
context-insert = { path = "../context-insert", features = ["test-api"] }
derive_builder = "^0.20"
tracing = { version = "^0.1", features = ["attributes", "valuable"] }
uuid = { version = "^1.10", features = ["v4", "fast-rng", "serde"] }
derive-into-owned = "0.2"
one-of = "0.2"

#console-subscriber = "0.2"
#tracing-mutex = "0.3"

#[dependencies.tracing]
#version = "^0.1"
#features = ["attributes", "valuable"]
#tracing-appender = "^0.2"
#tracing-test = "^0.2"

#[dependencies.tracing-egui]
#path = "../../tracing-egui"
##version = "^0.1"

#[dependencies.tracing-subscriber]
#version = "^0.3"
#features = ["json"]

[dependencies.valuable]
version = "^0.1"
features = ["derive"]

[dependencies.nalgebra]
version = "^0.32"

[dependencies.petgraph]
#git = "https://github.com/mankinskin/petgraph"
path = "../petgraph"

[dependencies.pretty_assertions]
features = ["unstable"]
version = "^1"

[dependencies.serde]
features = ["derive"]
version = "^1"

[dependencies.tokio]
version = "^1"
features = [
    "sync",
    "rt",
    "rt-multi-thread",
    "macros",
]

[dependencies.tokio-stream]
version = "^0.1"
features = [
    "sync",
    "time",
    "io-util",
]

#[dev-dependencies.graph_app]
#path = "../"