[package]
name = "graph_app"
version = "0.1.0"
authors = ["Linus Behrbohm <linusbehrbohm@web.de>"]
edition = "2021"
resolver = "2"


[dependencies]
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
wasm-bindgen-futures = "0.4.23"
futures = "0.3"
lazy_static = "^1.4"
rand = "^0.9"
rand_distr = "^0.5"
itertools = "^0.14"
async-std = "1.12"
tracing-mutex = "0.3"
strum = "0.27"
derive_more = { version = "2.0.0", features = ["full"] }
derive-getters = "0.5"
context-read = { path = "../context-engine/context-read" }
context-trace = { path = "../context-engine/context-trace" }

[dependencies.tracing-egui]
path = "../tracing-egui"
#version = "^0.1"

[dependencies.tracing]
version = "^0.1"
features = ["attributes"]

[dependencies.tracing-subscriber]
version = "^0.3"
features = ["json"]

[dependencies.eframe]
path = "../egui/crates/eframe"

[dependencies.tokio]
version = "^1"
features = ["macros", "rt-multi-thread"]

[dependencies.tokio-util]
version = "^0.7"

[dependencies.petgraph]
#version = "^0.5"
path = "../petgraph"
#git = "https://github.com/mankinskin/petgraph"
features = ["serde-1"]


[dependencies.ngrams]
path = "../ngrams"

[features]
default = []
persistence = [
  "eframe/persistence",
] # Enable if you want to persist app state on shutdown
