[package]
name = "graph_app"
version = "0.1.0"
authors = ["Linus Behrbohm <linusbehrbohm@web.de>"]
edition = "2021"
resolver = "2"


[dependencies]
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
wasm-bindgen-futures = "0.4.23"
futures = "0.3"
lazy_static = "^1.4"
rand = "^0.9"
rand_distr = "^0.5"
itertools = "^0.14"
tracing-mutex = "0.3"
strum = { version = "0.27", features = ["derive"] }
derive_more = { version = "2.0.0", features = ["full"] }
derive-getters = "0.5"
indexmap = "2.11"

context-read = { path = "../context-engine/crates/context-read" }
context-insert = { path = "../context-engine/crates/context-insert" }
context-trace = { path = "../context-engine/crates/context-trace" }

[dependencies.tracing-egui]
path = "../tracing-egui"
#version = "^0.1"

[dependencies.tracing]
features = ["attributes"]
version = "^0.1"

[dependencies.tracing-subscriber]
features = ["json"]
version = "^0.3"

[dependencies.eframe]
path = "../egui/crates/eframe"

[dependencies.petgraph]
features = ["serde-1"]
path = "../context-engine/crates/deps/petgraph"
#version = "^0.5"
#git = "https://github.com/mankinskin/petgraph"

[dependencies.ngrams]
path = "../ngrams"

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = "4.5.48"
async-std = "1.12"
tokio = { version = "^1", features = ["macros", "rt-multi-thread"] }
tokio-util = "^0.7"
rerun = { path = "../rerun/crates/top/rerun", features = ["clap"] }

[dev-dependencies]
context-trace = { path = "../context-engine/crates/context-trace", features = [
  "test-api",
] }

[features]
default = []
persistence = [
  "eframe/persistence",
] # Enable if you want to persist app state on shutdown

# WebAssembly dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console"] }
tracing-wasm = "0.2"
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
log = "0.4"

# Enable unwinding panics in wasm so catch_unwind works
[profile.release]
panic = "unwind"

[profile.dev]
panic = "unwind"
