[package]
name = "ngrams"
version = "0.1.0"
edition = "2021"
resolver = "2"

[features]
test-hashing = []

[dependencies]

ngram = "0.1"
csv = "1.3.1"
maplit = "^1"
tap = "^1"
itertools = "^0.13"
derive-new = "^0.7.0"
derive_builder = "^0.20.2"
range-ext = "0.3.0"
pretty_assertions = "1.4.1"
serde = { version = "1.0.203", features = ["derive"] }
ciborium = "0.2"
lazy_static = "1.5.0"
derivative = "^2.2"
strum = "0.26.3"
strum_macros = "0.26.3"
derive-getters = "0.5"


[dependencies.derive_more]
version = "^1.0.0"
features = ["full"]

[dependencies.seqraph]
path = "../seqraph"

[dev-dependencies.seqraph]
path = "../seqraph"
features = ["test-hashing"]

#[dev-dependencies.ngrams]
#path = "."
#features = ["test-hashing"]