[package]
name = "ngrams"
version = "0.1.0"
edition = "2021"
resolver = "2"

[features]
test-hashing = []

[dependencies]

ngram = "0.1"
csv = "1.3.1"
maplit = "^1"
tap = "^1"
itertools = "^0.14"
derive-new = "^0.7.0"
derive_builder = "^0.20.2"
range-ext = "0.3.0"
pretty_assertions = "1.4.1"
serde = { version = "1.0.203", features = ["derive"] }
ciborium = "0.2"
lazy_static = "1.5.0"
derivative = "^2.2"
strum = "0.27"
strum_macros = "0.27"
derive-getters = "0.5"
tokio = { version = "^1", features = ["macros", "rt-multi-thread"] }

[dependencies.derive_more]
version = "^2"
features = ["full"]

[dependencies.tokio-util]
version = "^0.7"

[dependencies.context-read]
path = "../context-engine/context-read"

[dependencies.context-trace]
path = "../context-engine/context-trace"

[dev-dependencies.context-read]
path = "../context-engine/context-read"
features = ["test-hashing"]

#[dev-dependencies.ngrams]
#path = "."
#features = ["test-hashing"]
