[package]
name = "ngrams"
version = "0.1.0"
edition = "2021"
resolver = "2"

[features]
test-hashing = []

[dependencies]

ngram = "0.1"
csv = "1.3.1"
maplit = "^1"
tap = "^1"
itertools = "^0.14"
derive-new = "^0.7.0"
derive_builder = "^0.20.2"
range-ext = "0.3.0"
pretty_assertions = "1.4.1"
serde = { version = "1.0.203", features = ["derive"] }
ciborium = "0.2"
lazy_static = "1.5.0"
derivative = "^2.2"
strum = "0.27"
strum_macros = "0.27"
derive-getters = "0.5"

[dependencies.derive_more]
version = "^2"
features = ["full"]

# Tokio - use wasm-compatible features by default
[dependencies.tokio]
version = "^1"
features = ["sync", "rt", "macros", "time"]

# Multi-thread runtime only on native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.tokio]
version = "^1"
features = ["rt-multi-thread"]

[dependencies.tokio-util]
version = "^0.7"

# Web-sys for wasm localStorage support
[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = ["Window", "Storage", "console"]

# getrandom needs wasm_js feature for wasm builds
[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version = "0.3"
features = ["wasm_js"]

[dependencies.context-trace]
path = "../context-engine/crates/context-trace"

#[dev-dependencies.ngrams]
#path = "."
#features = ["test-hashing"]
