[package]
authors = ["Linus Behrbohm <linusbehrbohm@web.de>"]
edition = "2018"
name = "seqraph"
version = "0.1.0"

[features]
default = ["log_stdout"]
log_file = []
log_stdout = []
tracing_off = ["tracing/max_level_off"]


[dependencies]
async-std = "^1"
async-trait = "^0.1"
either = "^1.6"
futures = "^0.3"
indexmap = "^1.6"
lazy_static = "^1.4"
maplit = "^1"
num-traits = "^0.2"
pin-project-lite = "^0.2"
serde_json = "^1"
tempfile = "^3.3.0"
tracing-appender = "^0.2"
tracing-test = "^0.2"
rand = "^0.8"
rand_distr = "^0.4"
itertools = "^0.10"

[dependencies.tracing]
version = "^0.1"
features = ["attributes"]

[dependencies.tracing-subscriber]
version = "^0.3"
features = ["json"]

[dependencies.nalgebra]
version = "^0.24"

[dependencies.petgraph]
git = "https://github.com/mankinskin/petgraph"

[dependencies.pretty_assertions]
features = ["unstable"]
version = "^1"

[dependencies.serde]
features = ["derive"]
version = "^1"

[dependencies.tokio]
version = "^1"
features = [
  "sync",
  "rt",
  "rt-multi-thread",
  "macros",
]

[dependencies.tokio-stream]
version = "^0.1"
features = [
  "sync",
  "time",
  "io-util",
]

[dev-dependencies.graph_app]
path = "../"