[package]
authors = ["Linus Behrbohm <linusbehrbohm@web.de>"]
edition = "2018"
name = "seqraph"
version = "0.1.0"

[features]
default = [] #["log_stdout", "log_gui"]
log_file = []
log_stdout = []
log_gui = []
tracing_off = ["tracing/max_level_off"]

[[bin]]
name = "seqraph"

[dependencies]
async-std = "1.12"
async-trait = "^0.1"
either = "^1.6"
futures = "^0.3"
indexmap = "^1.6"
lazy_static = "^1.4"
maplit = "^1"
num-traits = "^0.2"
pin-project-lite = "^0.2"
serde_json = "^1"
tempfile = "^3.3.0"
tracing-appender = "^0.2"
tracing-test = "^0.2"
rand = "^0.8"
rand_distr = "^0.4"
itertools = "^0.10"
function_name = "^0.3"
indicatif = "^0.17"
histo = "^1"
rayon = "^1.5.3"
tap = "^1"
replace_with = "0.1.7"
async-recursion = "1"
console-subscriber = "0.1"
tracing-mutex = "0.2"
derive_more = "0.99"
linked_hash_set = "0.1.4"
linked-hash-map = "0.5.6"
derive-new = "0.5"
inquire = "0.6"
auto_impl = "1.1.0"
nrfind = "1"
ngram = "0.1"
csv = "1"
derivative = "^2.2"

[dependencies.tracing-egui]
path = "../../tracing-egui"
#version = "^0.1"

[dependencies.valuable]
version = "^0.1"
features = ["derive"]

[dependencies.tracing]
version = "^0.1"
features = ["attributes", "valuable"]

[dependencies.tracing-subscriber]
version = "^0.3"
features = ["json"]

[dependencies.nalgebra]
version = "^0.27"

[dependencies.petgraph]
git = "https://github.com/mankinskin/petgraph"

[dependencies.pretty_assertions]
features = ["unstable"]
version = "^1"

[dependencies.serde]
features = ["derive"]
version = "^1"

[dependencies.tokio]
version = "^1"
features = [
  "sync",
  "rt",
  "rt-multi-thread",
  "macros",
]

[dependencies.tokio-stream]
version = "^0.1"
features = [
  "sync",
  "time",
  "io-util",
]

#[dev-dependencies.graph_app]
#path = "../"