[package]
name = "code-helper"
version = "0.1.0"
edition = "2024"

[dependencies]
cargo_metadata = { version = "0.19.2", features = ["builder"] }
clap = { version = "4.5.36", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["full"] }
git2 = "0.20.1"
serde = { version = "1.0.219", features = ["derive"] }
syn = "2.0.100"
