[package]
name = "context-insert"
version = "0.1.0"
edition = "2024"

[lib]

[features]
default = []
test-api = []

[dependencies]
derive-new = "0.7.0"
derive_more = { version = "2", features = ["full"] }
itertools = "0.14"
linked-hash-map = "0.5"
linked_hash_set = "0.1"
derivative = "2.2"
maplit = "1.0"
pretty_assertions = "1.4"
tracing = { version = "^0.1", features = ["attributes", "valuable"] }
tracing-subscriber = "0.3"

context-search = { path = "../context-search", features = ["test-api"] }
context-trace = { path = "../context-trace", features = ["test-api"] }
