[package]
name = "context-search"
version = "0.1.0"
edition = "2021"

[features]
default = [] #["log_stdout", "log_gui"]
test-api = []

[dependencies]
itertools = "^0.14"
indexmap = { version = "^2.7", features = ["serde"]}
tracing = { version = "^0.1", features = ["attributes", "valuable"] }
tracing-subscriber = "0.3"
uuid = { version = "^1.10", features = ["v4", "fast-rng", "serde"] }
derive_builder = "^0.20"
lazy_static = "^1.4"
either = "^1.6"
derive_more = { version = "2", features = ["full"] }
auto_impl = "1.2.0"
derive-new = "0.7"
tap = "^1"
nrfind = "1"
derivative = "2.2"
linked_hash_set = "0.1"
linked-hash-map = "0.5"
one-of = "0.2"

context-trace = { path = "../context-trace", features = ["test-api"] }

[dependencies.pretty_assertions]
features = ["unstable"]
version = "^1.4"

[dependencies.petgraph]
#git = "https://github.com/mankinskin/petgraph"
path = "../../petgraph"

[dependencies.serde]
features = ["derive"]
version = "^1"