[package]
name = "import-refactor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "import-refactor"
path = "src/main.rs"

[dependencies]
syn = { version = "2.0", features = [
    "full",
    "parsing",
    "printing",
    "visit",
    "visit-mut",
] }
quote = "1.0"
proc-macro2 = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
walkdir = "2.0"
