[package]
name = "refactor-tool"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "refactor-tool"
path = "src/main.rs"

[[bin]]
name = "candle-server"
path = "src/bin/candle_server.rs"
required-features = ["ai", "embedded-llm"]

[dependencies]
syn = { version = "2.0", features = [
    "full",
    "parsing",
    "printing",
    "visit",
    "visit-mut",
] }
quote = "1.0"
proc-macro2 = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.0"
indexmap = "2.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Candle dependencies for embedded LLM support (latest stable version)
candle-core = { version = "0.9", optional = true }
candle-nn = { version = "0.9", optional = true }
candle-transformers = { version = "0.9", optional = true }
hf-hub = { version = "0.4", optional = true, features = ["tokio"] }
tokenizers = { version = "0.22", optional = true }
safetensors = { version = "0.6", optional = true }

# HTTP server dependencies for candle server
hyper = { version = "1.7", features = ["full"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
log = { version = "0.4", optional = true }

# Additional dependencies for model management and process control
regex = "1.0"
env_logger = "0.11"

[features]
default = []
ai = []
cuda = ["embedded-llm"]
metal = ["embedded-llm"]
embedded-llm = [
    "candle-core",
    "candle-nn",
    "candle-transformers",
    "hf-hub",
    "tokenizers",
    "safetensors",
    "hyper",
    "chrono",
    "log",
]

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
