[package]
name = "ngrams"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ngram = "0.1"
csv = "1"
maplit = "^1"
tap = "^1"
itertools = "^0.12"
plotters = "^0.3"
derive_more = "^0.99"
derive-new = "^0.6"
derive_builder = "^0.12"
range-ext = "0.3.0"
pretty_assertions = "1.4.0"


[dependencies.seqraph]
path = "../graph_app/seqraph"
